# metro-dash

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TECH_SPEC.md  TOPCOAT-DEV-CRASH.md  fly.toml
.github/workflows/: ci.yml  deploy-fly.yml
src/: charts.rs  client.rs  data.rs  main.rs  payload.rs  render.rs  style.rs
tests/: e2e.py
tests/fixtures/: ridership_fixture.csv
