[package]
name = "metro-dash"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "sync"] }
topcoat = { version = "0.3.1", path = "vendor/topcoat" }
